objects/SBQQ__OrderItemConsumptionSchedule__c.object
<CustomObject>
    <fields>
        <fullName>SBQQ__BillingTermUnit__c</fullName>
        <inlineHelpText>The unit used with the billing term to determine the billing frequency.</inlineHelpText>
        <label>Billing Term Unit</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Month</fullName>
                </value>
                <value>
                    <fullName>Year</fullName>
                </value>
                <value>
                    <fullName>Quarter</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__BillingTerm__c</fullName>
        <inlineHelpText>The number used with the billing term unit to determine the billing frequency.</inlineHelpText>
        <label>Billing Term</label>
        <precision>9</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rates</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__ConsumptionSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consumption Schedule</label>
        <referenceTo>ConsumptionSchedule</referenceTo>
        <relationshipLabel>Order Product Consumption Schedules</relationshipLabel>
        <relationshipName>OrderItemConsumptionSchedules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SBQQ__MatchingAttribute__c</fullName>
        <inlineHelpText>Usage is matched with a consumption schedule if the records share the same Matching Attribute value.</inlineHelpText>
        <label>Matching Attribute</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__OrderItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order Item</label>
        <referenceTo>OrderItem</referenceTo>
        <relationshipLabel>Order Product Consumption Schedules</relationshipLabel>
        <relationshipName>OrderItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__RatingMethod__c</fullName>
        <inlineHelpText>Choose a specific use case to rate usage against this schedule. This is a controlling picklist for the Type field.</inlineHelpText>
        <label>Rating Method</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__Type__c</fullName>
        <inlineHelpText>Range: The schedule prices only using the tier that applies to the usage quantity. Slab: Usage within a given bound receives pricing equal to its tier&apos;s value</inlineHelpText>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Range</fullName>
                </value>
                <value>
                    <fullName>Slab</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__UnitOfMeasure__c</fullName>
        <inlineHelpText>Usage quantities and rates apply to this unit of measurement.</inlineHelpText>
        <label>Unit of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
                <value>
                    <fullName>GigaBytes</fullName>
                </value>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Leads</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>blng__BillingGLRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing GL Rule</label>
        <referenceTo>blng__GLRule__c</referenceTo>
        <relationshipLabel>Billing GL Rule</relationshipLabel>
        <relationshipName>OICSsBillingGLRule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingGLTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing GL Treatment</label>
        <referenceTo>blng__GLTreatment__c</referenceTo>
        <relationshipLabel>Billing GL Treatment</relationshipLabel>
        <relationshipName>OICSsBillingGLTreatment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Billing Rule assigned</inlineHelpText>
        <label>Billing Rule</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>blng__BillingRule__c.blng__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>blng__BillingRule__c</referenceTo>
        <relationshipLabel>Billing Rule</relationshipLabel>
        <relationshipName>OICSsBillingRule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__BillingTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Billing Treatment</label>
        <referenceTo>blng__BillingTreatment__c</referenceTo>
        <relationshipLabel>Billing Treatment</relationshipLabel>
        <relationshipName>OICSsBillingTreatment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__FinanceBookAccounting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Finance Book object used to record the Accounting for this Order Product Consumption Schedule.</inlineHelpText>
        <label>Finance Book (Accounting)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>blng__FinanceBook__c.blng__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>blng__FinanceBook__c</referenceTo>
        <relationshipLabel>Finance Book (Accounting)</relationshipLabel>
        <relationshipName>OICSsFinanceBookAccounting</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__LegalEntity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Entity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>blng__LegalEntity__c.blng__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>blng__LegalEntity__c</referenceTo>
        <relationshipLabel>Legal Entity</relationshipLabel>
        <relationshipName>OICSsLegalEntity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__RevenueRecognitionRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Revenue Recognition Rule</label>
        <referenceTo>blng__RevenueRecognitionRule__c</referenceTo>
        <relationshipLabel>Revenue Recognition Rule</relationshipLabel>
        <relationshipName>OICSsRevenueRecognitionRule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TaxGLRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax GL Rule</label>
        <referenceTo>blng__GLRule__c</referenceTo>
        <relationshipLabel>Tax GL Rule</relationshipLabel>
        <relationshipName>OICSsTaxGLRule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TaxGLTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax GL Treatment</label>
        <referenceTo>blng__GLTreatment__c</referenceTo>
        <relationshipLabel>Tax GL Treatment</relationshipLabel>
        <relationshipName>OICSsTaxGLTreatment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TaxRule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Lookup to the Tax Rule assigned</inlineHelpText>
        <label>Tax Rule</label>
        <referenceTo>blng__TaxRule__c</referenceTo>
        <relationshipLabel>Tax Rule</relationshipLabel>
        <relationshipName>OICSsTaxRule</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>blng__TaxTreatment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tax Treatment</label>
        <referenceTo>blng__TaxTreatment__c</referenceTo>
        <relationshipLabel>Tax Treatment</relationshipLabel>
        <relationshipName>OICSsTaxTreatment</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Order Product Consumption Schedule</label>
    <nameField>
        <label>Order Product Consumption Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Product Consumption Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>